# mrsimulator

./: ..coverage.icloud  .buildinfo  .clang-format  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  APTFILE  CHANGELOG  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Procfile  README.md  app.json  build_wheel.sh  build_wheel_linux.sh  build_wheel_mac.sh  conda-requirements.txt  conftest.py  cplx_scale.ipynb  dmfit_comparision.py.scr  dmfit_comparision.py.src  environment-dev.yml  environment-doc.yml  environment-docs.yml  environment-rtd.yml  environment.yml  examples.html  genindex.html  getting_started.html  index.html  installation.html  isotopomers_object.html  lgtm.yml  (+29 more)
.github/: dependabot.yml
MRsimulator/: __init__.py  __version__.py  _utils_download_file.py  core.py  examples.py  parameterized_tensor.py  spin.py  unit.py  utils.py
_sources/: examples.rst.txt  getting_started.rst.txt  index.rst.txt  installation.rst.txt  isotopomers_object.rst.txt  nuclear_shielding.rst.txt  objects.rst.txt  spectrum_object.rst.txt
_static/: copybutton.js  documentation_options.js  style.css
api/: api.html  simulator.html
build_tools/: continuous-integration-conda.yml  environment.yml
docs/: CSA_static.rst  Doxyfile  Makefile  amorphous_material.rst  benchmark.rst  changelog.rst  conf.py  configuring_simulator.rst  examples.rst  getting_started-objects.rst  getting_started.rst  getting_started_coupled.rst  getting_started_ethanol.rst  index.rst  installation.rst  introduction.rst  isotopomers_object.rst  load_files.ipynb  load_isotopomers.rst  load_spin_systems.rst  make.bat  mr_objects.rst  mrsim_IO.rst  nuclear_shielding.rst  objects.rst  reduce_pdf.sh  required_packages.rst  requirements.rst  requirements.txt  sg_execution_times.rst  signal_processing.rst  simplify_spin_sys.rst  spectrum_object.rst  troubleshooting.rst  understanding-isotopomers.rst  understanding-spin_systems.rst  understanding_system.rst  using_mrsimulator_objects.rst  what's_going_on.rst  writing_custom_methods.rst
examples/: Na2SiO3_O17.csdf  README.rst  plot_Coesite.py  plot_PotassiumSulfate.py  plot_Wollastonite.py  plot_mrsimFitExample_O17.py  plot_mrsimFitExample_wollastonite.py
examples_source/: README.rst  test.ipynb
fitting_source/: README.rst
jupyternotebooks/: Getting_started_using_objects.ipynb  PotassiumSulfate.ipynb  coesite.ipynb  wollastonite.ipynb
mrsimulator/: Isotopomer.py  site.py  (+14 more)
(+1306 files in other folders)
